src/style/hero.scss
@use "sass:color";
@use "vars";

.headline,
h1 {
    font-size: 64px;
    line-height: 1.05;
    background: linear-gradient(
        20deg,
        var(--color-hero-gradient-1) 10%,
        var(--color-hero-gradient-2) 90%
    );
    -webkit-background-clip: text;
    margin: 24px 12px 12px;
}
h2.headline {
    font-size: 26px;
    margin: 62px 12px 12px;
    background: none;
    text-transform: uppercase;
    font-weight: 400;
}

.headline small,
h1 small {
    font-size: 18px;
    font-weight: normal;
    display: block;
    color: var(--color-white-90);
    max-width: 661px;
    margin: 21px auto 34px;
    line-height: 1.2;
}
h2.headline small {
    font-size: 16px;
    margin: 12px auto;
}
@media (max-width: 768px) {
    .headline,
    h1 {
        font-size: 36px;
        margin: 62px 12px 12px;
    }
    h2.headline {
        font-size: 28px;
    }
    .headline small,
    h1 small {
        font-size: 20px;
    }
}
h3 {
    margin: 0;
    color: var(--color-primary);
}

.inner-wrap {
    margin: auto;
    max-width: 1024px;
}

.hero-boxes {
    margin: 72px 0 122px;
    display: flex;
}
.hero-box {
    width: 33.33%;
    border-radius: 21px;
    padding: 12px;
    margin: 12px;
    color: var(--color-text);
    background: var(--color-black-30);
    border: 1px solid var(--color-white-10);
    display: flex;
    flex-direction: column;
}
.hero-icons {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 4px;

    img {
        width: 45px;
        height: 45px;

        &.full-bleed {
            padding: 5px;
            box-sizing: border-box;
        }

        &.padded {
            transform: scale(1.037);
        }
    }
}
@media (max-width: 768px) {
    .hero-boxes {
        display: block;
    }
    .hero-box {
        width: auto;
    }
}

#numbers {
    display: flex;
    justify-content: space-between;
    margin: 50px 0 122px;
    padding: 0 42px;
}

@media (max-width: 768px) {
    #numbers {
        display: block;
    }
}
.number-label {
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}
.number-label:hover {
    text-decoration: underline;
}

.number-label a {
    background: transparent;
}
.number {
    font-size: 36px;
    font-weight: bold;
    margin-bottom: 16px;
}
.number small {
    font-size: 16px;
    display: block;
    font-weight: normal;
    color: var(--color-primary);
}

.thunderhub:before {
    content: " ";
    display: inline-block;
    background: url(../assets/thunderhub.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 42px;
    height: 42px;
    border-radius: 12px;
    position: absolute;
    top: -8px;
    left: 0;
}
.thunderhub {
    position: relative;
    padding-left: 48px;
    text-decoration: none;
    font-size: 18px;
    color: var(--color-text);
    font-weight: bold;
    line-height: 1.1;
}
.rtl {
    display: inline-block;
    background: url(../assets/rtl.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 63px;
    height: 51px;
}
.lnbits {
    display: inline-block;
    background: url(../assets/lnbits.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 128px;
    height: 36px;
}
.breez {
    display: inline-block;
    background: url(../assets/logo-breez-header.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 96px;
    height: 45px;
}
.aqua {
    display: inline-block;
    background: url(../assets/aqua.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 180px;
    height: 32px;
}

.blockstream {
    display: inline-block;
    background: url(../assets/blockstream.webp);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 170px;
    height: 58px;
}
.rootstocklabs {
    display: inline-block;
    background: url(../assets/rootstocklabs.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 155px;
    height: 50px;
}
.arklabs {
    display: inline-block;
    background: url(../assets/arklabs.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 124px;
    height: 69px;
}
.fuji {
    display: inline-block;
    background: url(../assets/fuji.webp);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 120px;
    height: 38px;
}
.geyser {
    display: inline-block;
    background: url(../assets/geyser.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 120px;
    height: 40px;
}
.bull-bitcoin {
    display: inline-block;
    background: url(../assets/bull-bitcoin.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 180px;
    height: 41px;
}
.blockstreamApp:before {
    content: " ";
    display: inline-block;
    background: url(../assets/blockstream-app.webp);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 56px;
    height: 56px;
    border-radius: 12px;
    position: absolute;
    top: 0px;
    left: 0;
}
.blockstreamApp {
    position: relative;
    padding-left: 64px;
    text-decoration: none;
    font-size: 18px;
    color: var(--color-text);
    font-weight: normal;
    line-height: 1.6;
    display: inline-block;
}
.blockstreamApp br {
    display: block;
    margin-top: 6px;
}
.blockstreamApp span {
    display: block;
    text-align: left;
    font-weight: bold;
}
.helm {
    display: inline-block;
    background: url(../assets/helm.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 44px;
    height: 55px;
}
.bancoLibre {
    display: inline-block;
    background: url(../assets/banco-libre.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 200px;
    height: 40px;
}
.stashPay {
    display: inline-block;
    background: url(../assets/stashPay.webp);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 50px;
    height: 50px;
}
.tropykus {
    display: inline-block;
    background: url(../assets/tropykus.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 175px;
    height: 40px;
}
.speed {
    display: inline-block;
    background: url(../assets/speed.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 150px;
    height: 50px;
}
.fedi {
    display: inline-block;
    background: url(../assets/fedi.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 115px;
    height: 35px;
}
.alby {
    display: inline-block;
    background: url(../assets/alby.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 128px;
    height: 52px;
}
.cakepay {
    display: inline-block;
    background: url(../assets/cakepay.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    width: 181px;
    height: 50px;
}

#partners,
#integrations {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin: 40px 0 122px;
}

#partners > div,
#integrations > div {
    padding: 22px;
}

#partners > div > a,
#integrations > div > a:before,
#integrations > div > a {
    opacity: 0.8;
    // filter: brightness(1000) grayscale(1);
    transition: opacity 0.4s ease-in-out;
}

#partners > div > a:hover,
#integrations > div > a:hover:before,
#integrations > div > a:hover {
    opacity: 1;
    filter: brightness(1) grayscale(0);
}

#create-overlay.glow {
    transition: all 0.8s ease-in-out;
    overflow: hidden;
    opacity: 0.8;
}
#create-overlay.glow:hover {
    transition: all 0.8s ease-in-out;
    opacity: 1;
}
#create-overlay.glow .frame {
    transition: all 0.8s ease-in-out;
    box-shadow: 0 0 0 var(--color-primary-glow);
}

@media (min-width: 488px) {
    #create-overlay.glow .frame {
        box-shadow: 0 0 40px var(--color-primary-glow);
    }
    #create-overlay.glow .frame:hover {
        box-shadow: 0 0 60px var(--color-primary-glow);
    }
}

